spacing issues fixed in headings, menu button centered

--- a/dev/styles/_global.scss
+++ b/dev/styles/_global.scss
@@ -76,6 +76,8 @@ a {
 .section--header-center {
     text-align: center;
     margin-bottom: 20px;
+    margin-right: 20px;
+    margin-left: 20px;
 }
 
 h3 {
@@ -128,6 +130,6 @@ h4 {
 @media (max-width: 720px) {
     .section--header-center {
         max-width: 600px;
-        margin: 2vh auto;
+        margin: 2vh 20px;
     }
  }
