--- a/dev/styles/_nav.scss
+++ b/dev/styles/_nav.scss
@@ -65,11 +65,11 @@ nav {
 
 .nav--responsive-menu input {
     display: block;
-    width: 40px;
-    height: 32px;
+    width: 50px;
+    height: 45px;
     position: absolute;
-    top: -7px;
-    left: -5px;
+    bottom: 1px;
+    left: 5px;
     opacity: 0; 
     z-index: 2; 
 }
